public/style.css
html, body {
    margin: 0;
    padding: 0;
    overflow: hidden;
}

canvas {
    width: 100%;
    height: 100vh;
}

#texture-assets {
    display: none;
}

#debug-hud {
    position: absolute;
    padding-top: 1%;
    width: 33%;
    height: 45%;
    color: white;
    background-color: rgba(0, 0, 0, 0.33);
    
}

#top {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding-left: 1%;
    padding-right: 1%;
}

#console {
    overflow-y: scroll;
    height: 80%;
}

#console-filter {
    display: flex;
    justify-content: end;
}

#console .console-entry {
    font-family: 'Consolas', 'Menlo', 'Monaco', 'Lucida Console', 'Liberation Mono', 'DejaVu Sans Mono', 'Bitstream Vera Sans Mono', 'Courier New', 'monospace', 'serif';
    display: flex;
    justify-content: space-between;
    padding-left: 1%;
    padding-right: 1%;
    font-size: small;
    border: 1px solid black;
}

#console .console-text {
    color: rgb(255, 255, 255);
}

#console .console-info {
    color: rgb(0, 180, 255);
}
#console .console-warning {
    color: rgb(255, 255, 0);
    font-size: medium;
}
#console .console-error {
    color: rgb(255, 0, 0);
    font-size: medium;
}
#console .console-time {
    font-size: x-small;
}

